--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -18,6 +18,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
+    font-weight: 900;
 }
 
 h2 {
@@ -49,7 +50,7 @@ h2 {
 }
 
 .pink-content {
-    background: url(/images/bg-top.png);
+    background: url(/images/sparkles.gif), url(/images/bg-top.png);
     background-position: top;
     background-repeat: repeat;
     -webkit-backface-visibility: hidden;
