--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -296,8 +296,8 @@ $button-sizes: (
 );
 $button-palette: $foundation-palette;
 $button-opacity-disabled: 0.25;
-$button-background-hover-lightness: -20%;
-$button-hollow-hover-lightness: -50%;
+$button-background-hover-lightness: 10%;
+$button-hollow-hover-lightness: 30%;
 $button-transition: background-color 0.25s ease-out, color 0.25s ease-out;;
 
 // 12. Button Group
@@ -420,7 +420,7 @@ $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
 $input-prefix-padding: 1rem;
-$form-label-color: $black;
+$form-label-color: $secondary-color;
 $form-label-font-size: rem-calc(15);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 1.8;
